--- a/src/ReadMe
+++ b/src/ReadMe
@@ -1,4 +1,4 @@
-The following program is called a Gift Suggester and it was created by Daniella Maydan and Amy Luo of Kuszmaul's 4th period AP CS class.
+The following program is called Gift Suggester and it was created by Daniella Maydan and Amy Luo of Kuszmaul's 4th period AP CS class.
 The program stores people's important events and can suggest gifts for the specific occasion.
 
 The program abides by the AP CS standards found at this link: http://apcentral.collegeboard.com/apc/public/repository/ap-computer-science-course-description.pdf . Our program is in accordance 
